# aegis-casper

./: .env.docker  .env.example  .gitignore  ACCEPTANCE.md  ASSUMPTIONS.md  DEPLOYMENT.md  Dockerfile  PLAN.md  README.md  REQUIREMENTS.md  SECURITY.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
contracts/: Cargo.toml  Odra.toml  README.md  rust-toolchain.toml
contracts/aegis-contracts/: Cargo.toml  build.rs
contracts/aegis-contracts/src/: lib.rs  registry.rs  vault.rs
contracts/deployments/: testnet.json
docs/: ARCHITECTURE.md  DEMO.md  DESIGN.md
docs/adr/: ADR-0001-odra-casper2-transaction-model.md  ADR-0002-x402-mock-facilitator-trait.md  ADR-0003-agent-owner-custody-model.md  ADR-0004-provider-agnostic-llm-client.md  ADR-0005-stdio-mcp-transport.md
docs/design/: tokens.css
logs/: payments.jsonl
scripts/: build-contracts.mjs  demo-check.mjs  demo.mjs  deploy-testnet.mjs
