[package]
name = "aegis-contracts"
version = "0.1.0"
edition = "2021"
description = "Aegis vault and reputation registry contracts (Odra / Casper)."
license = "MIT"

[dependencies]
odra = { version = "2.8.1", default-features = false }
odra-modules = { version = "2.8.1", default-features = false }

[dev-dependencies]
odra-test = { version = "2.8.1", default-features = false }

[build-dependencies]
odra-build = { version = "2.8.1", default-features = false }

[lib]
crate-type = ["rlib"]

# --- Vault wasm/schema build binaries ---
[[bin]]
name = "vault_build_contract"
path = "src/bin/build_contract.rs"
test = false
doctest = false
bench = false
doc = false

[[bin]]
name = "vault_build_schema"
path = "src/bin/build_schema.rs"
test = false
doctest = false
bench = false
doc = false

# --- Registry wasm/schema build binaries ---
[[bin]]
name = "registry_build_contract"
path = "src/bin/build_contract.rs"
test = false
doctest = false
bench = false
doc = false

[[bin]]
name = "registry_build_schema"
path = "src/bin/build_schema.rs"
test = false
doctest = false
bench = false
doc = false
